@@ -18,6 +18,9 @@
 
 package org.apache.cassandra.gms;
 
+import java.net.UnknownHostException;
+import java.util.Map;
+
 public interface FailureDetectorMBean
 {
     public void dumpInterArrivalTimes();
@@ -25,6 +28,10 @@ public interface FailureDetectorMBean
     public void setPhiConvictThreshold(int phi);
 
     public int getPhiConvictThreshold();
-    
+
     public String getAllEndpointStates();
+
+    public String getEndpointState(String address) throws UnknownHostException;
+
+    public Map<String, String> getSimpleStates();
 }
